objects/ContentVersion.object
<CustomObject>
    <fields>
        <fullName>SLSI__Category_Level_1__c</fullName>
        <label>Category Level 1</label>
        <picklist>
            <controllingField>SLSI__Content_Types__c</controllingField>
            <picklistValues>
                <fullName>Benefits</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Policies &amp; Procedures</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Communication Standards</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Brand Standards</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Training</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Process Docs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Release Notes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Delta Airlines</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Partners</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SLSI__Category_Level_2__c</fullName>
        <label>Category Level 2</label>
        <picklist>
            <controllingField>SLSI__Category_Level_1__c</controllingField>
            <picklistValues>
                <fullName>Category 2 Custom Value 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Category 2 Custom Value 2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Category 2 Custom Value 3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Category 2 Custom Value 4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DL External Slides and Documents</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DL Internal Slides and Documents</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Brand Resources</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PT External Slides and Documents</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PT Internal Slides and Documents</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SLSI__Category_Level_3__c</fullName>
        <label>Category Level 3</label>
        <picklist>
            <controllingField>SLSI__Category_Level_2__c</controllingField>
            <picklistValues>
                <fullName>Category 3 Custom Value 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Category 3 Custom Value 2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Category 3 Custom Value 3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Category 3 Custom Value 4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Category 3 Custom Value 5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Category 3 Custom Value 6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Category 3 Custom Value 7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Category 3 Custom Value 8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Corporate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Product &amp; Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Network</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Policy Upgrades</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Quarterly Sky Partner Review Shell</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Videos and Infographics</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Talking Points</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Newsletters</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PowerPoint Template</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Letterhead Template</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Brand Guidelines</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Air France - KLM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Virgin Atlantic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alitalia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Strategic Partners</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SLSI__Content_Departments__c</fullName>
        <label>Content Departments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SLSI__Content_Offices__c</fullName>
        <label>Content Offices</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SLSI__Content_Types__c</fullName>
        <label>Intranet Category</label>
        <picklist>
            <picklistValues>
                <fullName>HR Documents</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Marketing Documents</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales Ops</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales Technology</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales Communications</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SLSI__For_All_Departments__c</fullName>
        <defaultValue>false</defaultValue>
        <label>For All Departments</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SLSI__For_All_Offices__c</fullName>
        <defaultValue>true</defaultValue>
        <label>For All Offices</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SLSI__Office__c</fullName>
        <label>Office-Deprecated</label>
        <picklist>
            <picklistValues>
                <fullName>All Offices</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Beijing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Boston</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>London</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tokyo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bogota</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hong Kong</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SLSI__Select_Departments__c</fullName>
        <formula>IF( SLSI__For_All_Departments__c , 'Contents can only be published to particular departments if they are not intended to all departments i.e. for All Departments field is unchecked.', HYPERLINK("javascript: var vPathName =  window.location.pathname; var vSitePrefix = vPathName.replace('/sfc/', '').replace('/apex/SL_Intranet', ''); window.location = vSitePrefix+'/apex/SLSI__SL_IntranetDepartmentLookup?id="&amp; Id &amp; "';", "Click to select departments" , "_self") )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Select Departments</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SLSI__Select_Offices__c</fullName>
        <formula>IF( SLSI__For_All_Offices__c , 'Contents can only be published to particular offices if they are not intended to all offices i.e. for All Offices field is unchecked.', HYPERLINK("javascript: var vPathName =  window.location.pathname; var vSitePrefix = vPathName.replace('/sfc/', '').replace('/apex/SL_Intranet',''); window.location = vSitePrefix+'/apex/SLSI__SL_IntranetOfficeLookup?id="&amp; Id &amp; "';", "Click to select offices" , "_self") )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Select Offices</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SLSI__Selected_Department_Ids__c</fullName>
        <label>Selected Department Ids</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SLSI__Selected_Offices_Ids__c</fullName>
        <label>Selected Offices Ids</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
</CustomObject>